--- a/Bench.EntrepotPersistance.PosGresSQL/Bench.EntrepotPersistance.PostGresSQL.csproj
+++ b/Bench.EntrepotPersistance.PosGresSQL/Bench.EntrepotPersistance.PostGresSQL.csproj
@@ -36,6 +36,9 @@
     <Reference Include="Iesi.Collections">
       <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
     </Reference>
+    <Reference Include="Mono.Security">
+      <HintPath>..\packages\Npgsql.2.1.3\lib\net45\Mono.Security.dll</HintPath>
+    </Reference>
     <Reference Include="NHibernate">
       <HintPath>..\packages\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
