--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\Bench.EntrepotPersistance.Mock\packages.config" />
   <repository path="..\Bench.EntrepotPersistance.PosGresSQL\packages.config" />
+  <repository path="..\Bench.TestsIntegration\packages.config" />
   <repository path="..\Bench\packages.config" />
 </repositories>
