Entrepot MongoDB + Test CRUD

--- a/Bench.TestsIntegration/App.config
+++ b/Bench.TestsIntegration/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <appSettings>
     <add key="connectionStringPG" value="Server=localhost;database=Voirie;user id=Emeric;password=pouet"/>
+    <add key="connectionStringMG" value="mongodb://localhost/Voirie"/>
   </appSettings>
 </configuration>
