--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Bench.EntrepotPersistance.Mock\packages.config" />
+  <repository path="..\Bench.EntrepotPersistance.MongoDB\packages.config" />
   <repository path="..\Bench.EntrepotPersistance.PosGresSQL\packages.config" />
   <repository path="..\Bench.TestsIntegration\packages.config" />
   <repository path="..\Bench\packages.config" />
