Commandes + scenarios de bench sans cohabitation

--- a/Bench.TestsIntegration/Bench.TestsIntegration.csproj
+++ b/Bench.TestsIntegration/Bench.TestsIntegration.csproj
@@ -56,6 +56,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ScenarioBench.cs" />
     <Compile Include="Persistance\TestPersistance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -66,6 +67,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Bench.Commandes\Bench.Commandes.csproj">
+      <Project>{75003360-b529-416f-8156-65541568087b}</Project>
+      <Name>Bench.Commandes</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Bench.EntrepotPersistance.Mock\Bench.EntrepotPersistance.Mock.csproj">
       <Project>{31b981f1-bbdd-4136-8ef5-e1f29566004b}</Project>
       <Name>Bench.EntrepotPersistance.Mock</Name>
